# University

./: README.md
ExtraClass/Calculo/Integrales/: Ejercicios.tex  Soluciones.tex
ExtraClass/Calculo/Interpolacion/: Ejercicios.tex  Soluciones.tex
ExtraClass/Calculo/SucesionesYSeries/: Ejercicios.tex  Soluciones.tex
ExtraClass/Estadistica/Inferencia/: Ejercicios.tex  Soluciones.tex
ExtraClass/Estadistica/Probabilidad/Soluciones/: SolucionesRefuerzoProbabilidad.tex
Year1/Q2/Algebra/Examenes/: EXAMEN final Álgebra 2025 (Resolucion).tex  EXAMEN parcial Álgebra 2025 (Resolucion).tex
Year2/A/ProyectosII/: T1.1_Python_alumni_ES.ipynb
Year2/Q1/AnalisisI/Tema 1/: Tema 1 -  Comandos.txt
Year2/Q1/AnalisisI/Tema 2/: Solucion Ejercicios Numeros Complejos.aux  Solucion Ejercicios Numeros Complejos.fdb_latexmk  Solucion Ejercicios Numeros Complejos.fls  Solucion Ejercicios Numeros Complejos.tex
Year2/Q1/SSOO/Formularios/: formularioFicheros.tex  formularioMemoriaCache.tex  formularioMemoriaVirtual.tex
Year2/Q2/Algoritmos/Extra/: reinas.cpp  (+2 more)
Year2/Q2/BBDD/: DDL.sql  biblioteca.sql  biblioteca1.sql  bibliotecaUniversitaria.sql  function.sql  practica2basedatos.py  practica2basedatos2.py  procedure.sql  pyConnection.py  pyConnection2.py  query.sql  script.sh  smallRelationsInsertFile.sql
Year3/Q1/EspaciosTopologicos/: continuidadTopologias.tex
Year3/Q1/SSDD/: AWS_Guide.md  examen.md  server.cpp  thread.cpp
Year3/Q1/SSDD/ChatRPC/: CMakeLists.txt  clientManager.cpp  clientManager.h  log.cpp  log.h  main.cpp  persona.cpp  persona.h  personaDistribuida.cpp  server.cpp
(+589 files in other folders)
